syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GrpcService";
option java_package = "com.example.matching_service.proto";

service MatchingService {
  rpc PlaceHolder(PlaceHolderRequest) returns (PlaceHolderResponse);
}

message PlaceHolderRequest {}
message PlaceHolderResponse {}
